# PageWise

./: .gitignore  DEVELOPMENT_PLAN.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/Reader/: BookmarksPanel.tsx  PdfReaderView.tsx  ReaderView.tsx  SearchBar.tsx  TocPanel.tsx
src/components/Settings/: SettingsPanel.tsx
src/hooks/: useBookImport.ts  useClickOutside.ts  useFileDrop.ts
src/store/: libraryStore.ts  settingsStore.ts
src/types/: index.ts
src/utils/: coverStorage.ts  text.ts
