[package]
name = "pagewise"
version = "0.1.0"
description = "Pagewise - Windows EPUB Reader"
authors = ["Lotus"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "protocol-asset", "path-all", "fs-write-file", "fs-remove-file", "fs-exists", "fs-create-dir", "fs-read-dir", "window-set-focus", "dialog-open", "fs-read-file", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
